--- a/src/app/views/pages/profil/profil.component.html
+++ b/src/app/views/pages/profil/profil.component.html
@@ -1,5 +1,90 @@
 <c-card class="mb-4">
     <c-card-body>
+        <c-nav variant="pills">
+                     
+            <c-nav-item>
+              <a [cTabContent]="tabContent3" [routerLink] [tabPaneIdx]="0" cNavLink>
+                <svg cIcon class="me-2" name="cilUser"></svg>
+                Informations
+              </a>
+            </c-nav-item>
+            <c-nav-item>
+              <a [cTabContent]="tabContent3" [routerLink] [tabPaneIdx]="1" cNavLink>
+                <svg cIcon class="me-2" name="cilCode"></svg>
+                Mot de passe
+              </a>
+            </c-nav-item>
+          </c-nav>
+          <c-tab-content #tabContent3="cTabContent" cRounded="bottom" [activeTabPaneIdx]="0">
+            <c-tab-pane aria-labelledby="docs-code-preview" class="p-3 preview" role="tabpanel">
+                <form cForm [formGroup]="itemForm" ngNativeValidate>
+                    <div class="row p-2">
+                      <div [cFormFloating]="false" class="mb-3 col-md-6"> <label cLabel for="floatingInput">Nom</label>
+                        <input cFormControl id="floatingInput" placeholder="firstname" type="text" formControlName="firstname" />
+                       
+                      </div>
+                      <div [cFormFloating]="false" class="mb-3 col-md-6"><label cLabel for="floatingInput">Prenom</label>
+                        <input cFormControl id="floatingInput" placeholder="lastname" type="text" formControlName="lastname" />
+                        
+                      </div>
+                      <div [cFormFloating]="false" class="mb-3 col-md-6"><label cLabel for="floatingInput">Telephone</label>
+                        <input cFormControl id="floatingInput" placeholder="phone" type="text" formControlName="phone" />
+                        
+                      </div>
+                      <div [cFormFloating]="false" class="mb-3 col-md-6"><label cLabel for="floatingInput">Email</label>
+                        <input cFormControl id="floatingInput" placeholder="email" type="email" formControlName="email" />
+                        
+                      </div>
+                      <div class="mb-3 col-md-6">
+                        <div>
+                          <c-form-check>
+                            <input cFormCheckInput formControlName="flexRadioDefault" formControlName="genre" type="radio" value="M" />
+                            <label cFormCheckLabel>Homme</label>
+                          </c-form-check>
+                          <c-form-check>
+                            <input cFormCheckInput formControlName="flexRadioDefault" formControlName="genre" type="radio" value="F" />
+                            <label cFormCheckLabel>Femme</label>
+                          </c-form-check>
+                        </div>
+                      </div>
+                  
+                      <div cFormFloating="false" class="mb-3 col-md-6"> <label cLabel for="floatingSelect">Etat civil</label>
+                        <select  formControlName="etatCivil" aria-label="Floating label select example" cSelect id="floatingSelect">
+                    
+                          <option value="marie">Marie(é)</option>
+                          <option value="celibataire">Celibataire</option>
+                        </select>
+                       
+                      </div>
+                      <div [cFormFloating]="false" class="mb-3 col-md-6">  <label cLabel for="floatingInput">CompteIban</label>
+                        <input cFormControl id="floatingInput" placeholder="compteIban" type="text" formControlName="compteIban" />
+                      
+                      </div>
+                    
+                     
+                    </div>
+                    <div class="mt-4">
+                        <button type="button" class="btn btn-light">Close</button>
+                        <button class="btn btn-secondary mr-1  pull-right" type="button" (click)="onSubmit()">Enregister</button>
+                      </div>
+                  </form>
+            </c-tab-pane>
+            <c-tab-pane aria-labelledby="docs-code-preview" class="p-3 preview" role="tabpanel">
+             
+                <div [cFormFloating]="false" class="mb-3 col-md-6">  <label cLabel for="floatingInput">Ancien mot de passe</label>
+                    <input [(ngModel)]="oldpassword" cFormControl id="floatingInput" placeholder="password" type="password"/>
+                  
+                  </div>
+                  <div [cFormFloating]="false" class="mb-3 col-md-6">  <label cLabel for="floatingInput">Nouveau mot de passe</label>
+                    <input cFormControl [(ngModel)]="newpassword" id="floatingInput" placeholder="password" type="password"/>
+                  
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-light">Close</button>
+                    <button class="btn btn-secondary mr-1  pull-right" type="button" (click)="changePassword()">Enregister</button>
+                  </div>
+            </c-tab-pane>
         
+          </c-tab-content>
     </c-card-body>
     </c-card>
