--- a/src/app/views/pages/fonction/fonction.component.html
+++ b/src/app/views/pages/fonction/fonction.component.html
@@ -28,7 +28,12 @@
             <td>{{row.typeFonction}}</td>
             <td>{{row.salaireSuppl}}</td>
             <td>{{row.heureTravaille}}</td>
-            <td></td>
+            <td>
+              <div class="btn-group">
+                <button class="btn btn-sm btn-outline-dark" (click)="openDepartement(contentDepartement,row.id)">Departements</button>
+                <button class="btn btn-sm btn-outline-success" (click)="openAvantage(contentDepartement,row.id)">Fonctions</button>
+              </div>
+            </td>
           </tr>
   
         </tbody>
@@ -68,3 +73,50 @@
       <button class="btn btn-secondary mr-1  pull-right" type="button" (click)="onSubmit()">Enregister</button>
     </div>
   </ng-template>
+  <ng-template #contentDepartement let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title">Departements</h4>
+      <button type="button" class="btn close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+  
+        <div class="row">
+          <div cFormFloating class="mb-3 col-md-8">
+            <select [(ngModel)]="departement" (change)="departementChange(departement)"  aria-label="Floating label select example" cSelect id="floatingSelect">
+          
+        <option *ngFor="let departement of departements" value="{{departement.id}}"> {{departement.nomDepartement}} </option>
+         
+            </select>
+            <label cLabel for="floatingSelect">Departement</label>
+          </div>
+        
+        </div>
+        <div class="row container">
+          <table class="table ">
+            <thead>
+              <th>#</th>
+            <th>Departement</th>
+            <th></th>
+            </thead>
+            <tbody>
+              <tr *ngFor="let row of departementsbyfonction">
+                <td></td>
+                <td>{{row.nomDepartement}}</td>
+                <td><button class="btn btn-sm btn-danger">
+                  <svg cIcon class="me-2" name="cilTrash"></svg>
+                </button></td>
+              </tr>
+            </tbody>
+            
+          </table>
+        </div>
+
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+  
+    </div>
+  </ng-template>
+  
