--- a/src/app/views/pages/users/users.component.html
+++ b/src/app/views/pages/users/users.component.html
@@ -35,30 +35,108 @@
           <td>{{row.genre}}</td>
           <td>{{row.phone}}</td>
           <td>{{row.departement}}</td>
-          <td></td>
+          <td>
+            <div class="btn-group">
+              <button class="btn btn-sm btn-outline-dark"
+                  (click)="openEditLg(contentEdit,row)">Editer</button>
+                  <button class="btn btn-sm btn-outline-danger" (click)="openDelete(contentDelete,row)">Supprimer</button>
+          </div>
+          </td>
         </tr>
 
       </tbody>
     </table>
   </c-card-body>
 </c-card>
-<ng-template #staticBackdrop>
-  <button [cModalToggle]="staticBackdropModal.id" cButton>Add departement</button>
-  <c-modal #staticBackdropModal backdrop="static" id="staticBackdropModal">
-    <c-modal-header>
-      <h5 cModalTitle>Ajouter departement</h5>
-      <button [cModalToggle]="staticBackdropModal.id" cButtonClose></button>
-    </c-modal-header>
-    <c-modal-body>
+<ng-template #contentEdit let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">Modifier un utilisateur</h4>
+    <button type="button" class="btn close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form cForm [formGroup]="itemForm" ngNativeValidate>
+      <div class="row p-2">
+        <div [cFormFloating]="true" class="mb-3 col-md-6">
+          <input cFormControl id="floatingInput" placeholder="firstname" type="text" formControlName="firstname" />
+          <label cLabel for="floatingInput">Nom</label>
+        </div>
+        <div [cFormFloating]="true" class="mb-3 col-md-6">
+          <input cFormControl id="floatingInput" placeholder="lastname" type="text" formControlName="lastname" />
+          <label cLabel for="floatingInput">Prenom</label>
+        </div>
+        <div [cFormFloating]="true" class="mb-3 col-md-6">
+          <input cFormControl id="floatingInput" placeholder="phone" type="text" formControlName="phone" />
+          <label cLabel for="floatingInput">Telephone</label>
+        </div>
+        <div [cFormFloating]="true" class="mb-3 col-md-6">
+          <input cFormControl id="floatingInput" placeholder="email" type="email" formControlName="email" />
+          <label cLabel for="floatingInput">Email</label>
+          <ng-container class="invalid"
+          *ngIf="itemForm.get('email').hasError('required') && itemForm.get('email').touched">
+          email is required</ng-container>
+          <ng-container class="invalid"
+          *ngIf="itemForm.get('email').hasError('pattern') && itemForm.get('email').touched">
+          email trop court</ng-container>
+        </div>
+        <div class="mb-3 col-md-6">
+          <div>
+            <c-form-check>
+              <input cFormCheckInput formControlName="flexRadioDefault" formControlName="genre" type="radio" value="M" />
+              <label cFormCheckLabel>Homme</label>
+            </c-form-check>
+            <c-form-check>
+              <input cFormCheckInput formControlName="flexRadioDefault" formControlName="genre" type="radio" value="F" />
+              <label cFormCheckLabel>Femme</label>
+            </c-form-check>
+          </div>
+        </div>
+    
+        <div cFormFloating class="mb-3 col-md-6">
+          <select  formControlName="etatCivil" aria-label="Floating label select example" cSelect id="floatingSelect">
+      
+            <option value="marie">Marie(é)</option>
+            <option value="celibataire">Celibataire</option>
+          </select>
+          <label cLabel for="floatingSelect">Etat civil</label>
+        </div>
+        <div [cFormFloating]="false" class="mb-3 col-md-6">
+          <label cLabel for="floatingInput">CompteIban</label> 
+           <input cFormControl id="floatingInput" placeholder="BExx xxxx xxxx xxxx" type="text"
+                formControlName="compteIban" />
+            
+            <ng-container class="invalid"
+            *ngIf="itemForm.get('compteIban').hasError('required') && itemForm.get('compteIban').touched">
+            compteIban is required</ng-container>
+            <ng-container class="invalid"
+            *ngIf="itemForm.get('compteIban').hasError('pattern') && itemForm.get('compteIban').touched">
+            compteIban trop court</ng-container>
+        </div>
+        <div cFormFloating class="mb-3 col-md-6">
+          <select  formControlName="role" aria-label="Floating label select example" cSelect id="floatingSelect_role">
+            <option value="ROLE_USER">ROLE_USER</option>
+            <option value="ROLE_COMPTABLE">ROLE_COMPTABLE</option>
+            <option value="ROLE_ADMIN">ROLE_ADMIN</option>
+          </select>
+          <label cLabel for="floatingSelect">ROLE</label>
+        </div>
+        <div cFormFloating class="mb-3">
+          <select formControlName="departement_id" aria-label="Floating label select example" cSelect id="floatingSelect">
+        
+ <option *ngFor="let departement of departements" value="{{departement.id}}"> {{departement.nomDepartement}} </option>
+       
+          </select>
+          <label cLabel for="floatingSelect">Departement</label>
+        </div>
+      </div>
 
-    </c-modal-body>
-    <c-modal-footer>
-      <button [cModalToggle]="staticBackdropModal.id" cButton color="secondary">
-        Close
-      </button>
-      <button cButton color="primary">Enregistrer</button>
-    </c-modal-footer>
-  </c-modal>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+    <button class="btn btn-secondary mr-1  pull-right" [disabled]="!itemForm.valid" type="button" (click)="onSubmit()">Enregister</button>
+  </div>
 </ng-template>
 <ng-template #content let-modal>
   <div class="modal-header">
@@ -134,5 +212,20 @@
   <div class="modal-footer">
     <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
     <button class="btn btn-secondary mr-1  pull-right" type="button" (click)="onSubmit()">Enregister</button>
+  </div>
+</ng-template>
+<ng-template #contentDelete let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">Supprimer un employé</h4>
+    <button type="button" class="btn close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+   <p>Voulez vous vraiment supprimer ce employé?</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+    <button class="btn btn-secondary mr-1  pull-right" type="button" (click)="delete()">Confimer</button>
   </div>
 </ng-template>
