--- a/src/app/views/pages/departement/departement.component.html
+++ b/src/app/views/pages/departement/departement.component.html
@@ -16,21 +16,50 @@
           <tr>
             <th scope="col">#</th>
             <th scope="col">Nom departement</th>
+            <th scope="col">Action</th>
           </tr>
           </thead>
           <tbody>
           <tr *ngFor="let row of rows">
             <th scope="row">{{row.id}}</th>
             <td>{{row.nomDepartement}}</td>
+            <td><div class="btn-group">
+            
+              <button class="btn btn-sm btn-outline-dark"
+                  (click)="openEditLg(contentEdit,row)">Editer</button>
+                  <button class="btn btn-sm btn-outline-danger"
+                   (click)="openDelete(contentDelete,row)">Supprimer</button>
+          </div>
+        </td>
           </tr>
         
           </tbody>
         </table>
     </c-card-body>
   </c-card>
+  <ng-template #contentEdit let-modal>
+    <div class="modal-header">
+        <h4 class="modal-title">Modifier un departement</h4>
+        <button type="button" class="btn close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+      <form cForm  [formGroup]="itemForm" ngNativeValidate>
+        <div [cFormFloating]="true" class="mb-3">
+          <input cFormControl id="floatingInput" placeholder="nomDepartement" type="text" formControlName="nomDepartement" />
+          <label cLabel for="floatingInput">Nom du departement</label>
+        </div>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+        <button class="btn btn-secondary mr-1  pull-right" type="button" (click)="onSubmit()">Modifier</button>
+    </div>
+  </ng-template>
 <ng-template #content let-modal>
   <div class="modal-header">
-      <h4 class="modal-title">Modifier zone</h4>
+      <h4 class="modal-title">Ajouter un departement</h4>
       <button type="button" class="btn close" aria-label="Close" (click)="modal.dismiss('Cross click')">
           <span aria-hidden="true">&times;</span>
       </button>
@@ -46,5 +75,20 @@
   <div class="modal-footer">
       <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
       <button class="btn btn-secondary mr-1  pull-right" type="button" (click)="onSubmit()">Enregister</button>
+  </div>
+</ng-template>
+<ng-template #contentDelete let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">Supprimer un departement</h4>
+    <button type="button" class="btn close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+   <p>Voulez vous vraiment supprimer ce departement?</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+    <button class="btn btn-secondary mr-1  pull-right" type="button" (click)="delete()">Confimer</button>
   </div>
 </ng-template>
