--- a/src/app/views/pages/fonction/fonction.component.html
+++ b/src/app/views/pages/fonction/fonction.component.html
@@ -30,9 +30,11 @@
             <td>{{row.heureTravaille}}</td>
             <td>
               <div class="btn-group">
+                <button class="btn btn-sm btn-outline-success" (click)="openEditLg(contentEdit,row)">Editer</button>
+                <button class="btn btn-sm btn-outline-danger" (click)="openDelete(contentDelete,row)">Supprimer</button>
                 <button class="btn btn-sm btn-outline-dark" (click)="openDepartement(contentDepartement,row.id)">Departements</button>
-                <button class="btn btn-sm btn-outline-success" (click)="openAvantage(contentDepartement,row.id)">Fonctions</button>
-              </div>
+                <!--<button class="btn btn-sm btn-outline-success" (click)="openAvantage(contentDepartement,row.id)">Fonctions</button> 
+                --> </div>
             </td>
           </tr>
   
@@ -40,7 +42,38 @@
       </table>
     </c-card-body>
   </c-card>
-
+  <ng-template #contentEdit let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title">Modifier une fonction</h4>
+      <button type="button" class="btn close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form cForm [formGroup]="itemForm" ngNativeValidate>
+        <div class="p-2">
+          <div [cFormFloating]="true" class="mb-3">
+            <input cFormControl id="floatingInput" placeholder="typeFonction" type="text" formControlName="typeFonction" />
+            <label cLabel for="floatingInput">typeFonction</label>
+          </div>
+          <div [cFormFloating]="true" class="mb-3">
+            <input cFormControl id="floatingInput" placeholder="salaireSuppl" type="text" formControlName="salaireSuppl" />
+            <label cLabel for="floatingInput">salaireSuppl</label>
+          </div>
+          <div [cFormFloating]="true" class="mb-3">
+            <input cFormControl id="floatingInput" placeholder="phone" type="text" formControlName="heureTravaille" />
+            <label cLabel for="floatingInput">heureTravaille</label>
+          </div>
+        
+        </div>
+  
+      </form>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+      <button class="btn btn-secondary mr-1  pull-right" type="button" (click)="onSubmit()">Modifier</button>
+    </div>
+  </ng-template>
   <ng-template #content let-modal>
     <div class="modal-header">
       <h4 class="modal-title">Ajouter une fonction</h4>
@@ -117,6 +150,22 @@
     <div class="modal-footer">
       <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
   
+    </div>
+  </ng-template>
+
+  <ng-template #contentDelete let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title">Supprimer une fonction</h4>
+      <button type="button" class="btn close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+     <p>Voulez vous vraiment supprimer cette fonction?</p>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+      <button class="btn btn-secondary mr-1  pull-right" type="button" (click)="delete()">Confimer</button>
     </div>
   </ng-template>
   
