--- a/src/app/views/pages/heure-suppl/heure-suppl.component.html
+++ b/src/app/views/pages/heure-suppl/heure-suppl.component.html
@@ -31,7 +31,11 @@
             <td>{{row.dateHeureSuppl}}</td>
             <td>{{row.heureDebut}}</td>
             <td>{{row.heureFin}}</td>
-            <td></td>
+            <td>
+              <div class="btn-group">
+                    <button class="btn btn-sm btn-outline-danger" (click)="openDelete(contentDelete,row)">Supprimer</button>
+            </div>
+            </td>
           </tr>
   
         </tbody>
@@ -72,5 +76,20 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
         <button class="btn btn-secondary mr-1  pull-right" type="button" (click)="onSubmit()">Enregister</button>
+    </div>
+  </ng-template>
+  <ng-template #contentDelete let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title">Supprimer une heure supplementaire</h4>
+      <button type="button" class="btn close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+     <p>Voulez vous vraiment supprimer cette heure?</p>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+      <button class="btn btn-secondary mr-1  pull-right" type="button" (click)="delete()">Confimer</button>
     </div>
   </ng-template>
