--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -109,7 +109,7 @@
         <hr cDropdownDivider/>
       </li>
       <li>
-        <a routerLink="./" cDropdownItem>
+        <a href="#" (click)="logout()" cDropdownItem>
           <svg cIcon class="me-2" name="cilLockLocked"></svg>
           Lock Account
         </a>
