--- a/src/app/containers/default-layout/default-footer/default-footer.component.html
+++ b/src/app/containers/default-layout/default-footer/default-footer.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="ms-auto">
     Powered by
-    <a href="https://coreui.io/pro/angular" target="_blank">
+    <a href="#" target="_blank">
       <span> Rodrigue mbah</span>
     </a>
   </div>
